--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,16 +3,14 @@
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+- type: bili
+  icon: "fab fa-bilibili"
+  url: "https://space.bilibili.com/22690254"
 
 - type: email
   icon: "fas fa-envelope"
-  noblank: true # open link in current tab
-
-- type: rss
-  icon: "fas fa-rss"
   noblank: true
+
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
