--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: https://giscus.app/client.js
+    repo: HalfADog/halfadog.github.io
     repo_id: R_kgDOQDkGWw
     category: Comments
     category_id: DIC_kwDOQDkGW84CwuJB
